# user-authentication-app

./: .gitignore  README.md  memo.md  pyproject.toml  requirements.txt  set_up.sh
app/: app_utils.py  cam_app.py  image_paths.csv  main.py  user_passwords.csv
docker/: cpu.Dockerfile  gpu.Dockerfile
face_recognition/: experiment_details.csv
face_recognition/input/: make_csv.py  preprocess.py
face_recognition/scripts/: create_exp.sh  download_data.sh  make_csv.py  preprocess.py  pull_items.sh  run_cpu.sh  run_exp.sh  run_gpu.sh  serve_mlflow.sh
face_recognition/src/: main.py
face_recognition/src/configs/: common.yaml
face_recognition/src/configs/augmentation/: normal.yaml
face_recognition/src/configs/exp/: exp_001.yaml  exp_003.yaml
face_recognition/src/configs/optimizer/: Adam.yaml  SGD.yaml  SGD_1e-3.yaml
face_recognition/src/configs/scheduler/: MStepLR.yaml  StepLR.yaml  no_schedule.yaml
face_recognition/src/experiments/_template/: run.sh
face_recognition/src/experiments/exp_001/: run.sh
face_recognition/src/experiments/exp_003/: run.sh
face_recognition/src/experiments/exp_004/: run.sh
face_recognition/src/experiments/exp_005/: run.sh
face_recognition/src/libs/dataset/: __init__.py  dataset.py  transforms.py
face_recognition/src/libs/models/: __init__.py  arcface.py  base_model.py  models.py  networks.py
face_recognition/src/libs/runner/: _logging.py  infer.py  train.py  (+2 more)
hand_tracking/scripts/: create_exp.sh  download_data.sh
scripts/: docker_build.sh  docker_build_gpu.sh  serve_app.sh  serve_jupyter.sh  serve_tensorboard.sh  sync.sh
(+7 files in other folders)
