[tool.poetry]
name = "11_demospace"
version = "0.1.0"
description = ""
authors = ["mnozawa"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "4.4.0.46"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
Cython = "^0.29.22"
pytest = "^6.2.2"
nose = "^1.3.7"
streamlit = "^0.79.0"
tqdm = "^4.59.0"
torchsummary = "^1.5.1"
hydra-core = "^1.0.6"
mlflow = "^1.14.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
albumentations = "^0.5.2"
tensorboard = "^2.4.1"
torch = "1.6.0"
segmentation-models-pytorch = "^0.1.3"
psutil = "^5.8.0"
paramiko = "^2.7.2"
scp = "^0.13.3"
asyncio = "^3.4.3"
numpy = "1.20.2"
openvino = "^2021.3.0"
mediapipe = "^0.8.4"
facenet-pytorch = "^2.5.2"
mtcnn = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
